# TrabajoRT_JORDI

./: .gitignore  CMakeLists copy.txt  CMakeLists.txt  Doxyfile  README.md
.github/: copilot-instructions.md
doc/: ARCHITECTURE.md  ASSESSMENT.md  AUTHORS  CHANGELOG.md  CONTRIBUTING.md  INSTALL.md  LICENSE  README.md  REFACTOR_SMARTPOINTERS.md  mainpage.md  v1.0.5-ROADMAP.md
include/: ADConverter.h  DAConverter.h  DiscreteSystem.h  Discretizer.h  Hilo.h  Hilo2in.h  HiloIntArranque.h  HiloPID.h  HiloReceptor.h  HiloSignal.h  HiloSwitch.h  HiloTransmisor.h  InterruptorArranque.h  PIDController.h  ParametrosCompartidos.h  Receptor.h  RuntimeLogger.h  SignalGenerator.h  SignalSwitch.h  StateSpaceSystem.h  Sumador.h  Temporizador.h  TransferFunctionSystem.h  Transmisor.h  VariablesCompartidas.h  comm.h  comm_config.h  config.h  messages.h  system_config.h
logs/: Hilo_runtime_20260111_114115.txt
src/: ADConverter.cpp  DAConverter.cpp  DiscreteSystem.cpp  Discretizer.cpp  Hilo.cpp  Hilo2in.cpp  HiloIntArranque.cpp  HiloPID.cpp  HiloReceptor.cpp  HiloSignal.cpp  HiloSwitch.cpp  HiloTransmisor.cpp  InterruptorArranque.cpp  PIDController.cpp  ParametrosCompartidos.cpp  Receptor.cpp  RuntimeLogger.cpp  SignalSwitch.cpp  StateSpaceSystem.cpp  Sumador.cpp  Temporizador.cpp  TransferFunctionSystem.cpp  Transmisor.cpp  VariablesCompartidas.cpp
test/: test.cpp  testADConverter.cpp  testDAConverter.cpp  testHilo.cpp  testHiloPID_circular.cpp  testHiloPID_timing.cpp  testPID.cpp  testSS.cpp  testStepSignal.cpp  testSumador.cpp  testTF.cpp  testTransmisor.cpp  test_receive.cpp  test_send.cpp
